complete merge